#1220: Removed UnitOfMeasureTypeName as a parameter for GetItemUnitOfMeasureTypes UC